<resources>
    <string name="app_name">Pantau Harga</string>
    <string name="action_segarkan">Segarkan Daftar</string>
    <string name="action_kirimharga">Kirim Harga</string>
    <string name="action_urutkan">Urutkan Daftar</string>
    <string name="action_lokasisaya">Cek Lokasi Saya</string>
    <string name="action_ambilkordinatbantuan">Bantuan Setel Koordinat</string>
    <string name="action_save_profile">Save Profile</string>
    <string name="action_hapusriwayatsemua">Hapus Semua Riwayat</string>
    <string name="action_hapusriwayatini">Hapus riwayat ini</string>
    <string name="lapor_keteranganpesan">Pesan Komoditas pangan dengan mengisi data berikut dengan benar dan isi keterangan tambahan</string>
    <string name="lapor_kirimdatapesan">PESAN KOMODITAS</string>
    <string name="lapor_okkirimdatapesan">Data transaksi pembelian anda telah dikirim</string>
    <string name="ic_teks_menu_belikomoditas">Pesan Komoditas</string>
    <string name="ic_teks_menu_kirimharga">Kirim Harga</string>
    <string name="ic_teks_menu_jualkomoditas">Jual Komoditas</string>
    <string name="ic_teks_menu_datapengguna">Data Pengguna</string>
    <string name="ic_teks_menu_riwayatlaporan">Riwayat Laporan</string>
    <string name="ic_teks_menu_tentangapp">Tentang Aplikasi</string>
    <string name="ic_teks_menu_sso_login">SSO Login</string>
    <string name="toast_nointernet">Koneksi internet tidak tersedia</string>
    <string name="teks_ok">OK</string>
    <string name="teks_batal">BATAL</string>
    <string name="teks_isimintalokasi">Aplikasi memerlukan akses lokasi dari perangkat untuk mengambil koordinat lokasi anda</string>
    <string name="toastdialog_pesangagalgps">GPS dan koneksi internet tidak tersedia, sehingga lokasi yang didapat akan tidak akurat.</string>
    <string name="toastgagaldata">Data tidak tersedia</string>
    <string name="toastolahdata">Gagal mengolah data</string>
    <string name="toastolahdataurut">Data tidak tersedia</string>
    <string name="toastnointernet">Koneksi internet tidak tersedia</string>
    <string name="teksketeranganperkg">harga per kilogram</string>
    <string name="tekscarikomoditas">Cari Komoditas Lain</string>
    <string name="teks_spin_namakomoditas">Nama Komoditas</string>
    <string name="teks_seekbar_radius">Radius Pencarian (Kilometer)</string>
    <string name="teks_urutkanberdasarkan">Urutkan</string>
    <string name="teks_keturutan">Urutkan harga komoditas berdasarkan :</string>
    <string-array name="array_modeurutan">
        <item>Lokasi terdekat</item>
        <item>Harga termurah</item>
        <item>Harga termahal</item>
    </string-array>
    <string name="toastgagalpeta">Peta gagal dimuat</string>
    <string name="login_register_datapengguna">Data Pengguna</string>
    <string name="login_register">Registrasi</string>
    <string name="login_registerket">Buat akun Pantau Harga dengan mendaftarkan data diri anda berikut ini dengan lengkap dan benar</string>
    <string name="login_namalengkap">Nama Lengkap</string>
    <string name="login_username">Nama Panggilan (Username)</string>
    <string name="login_password">Password</string>
    <string name="login_passwordkonfirm">Konfirmasi Password</string>
    <string name="login_email">E-mail</string>
    <string name="login_ktp">Nomor KTP</string>
    <string name="login_nohp">Nomor Handphone</string>
    <string name="login_alamat">Alamat Lengkap</string>
    <string name="login_kodepos">Kode Pos</string>
    <string name="karakterboleh">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_</string>
    <string name="karakterbolehnama">qwertyuiopasdfghjklz xcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_</string>
    <string name="login_login">Masuk Pantau Harga</string>
    <string name="teks_daftar">DAFTAR</string>
    <string name="teks_masuk">MASUK</string>
    <string name="teks_simpan">SIMPAN</string>
    <string name="oklogin_masuk">Anda berhasil masuk ke akun Pantau Harga anda. Anda bisa lanjut memantau harga serta memperbaharui harga terbaru dari komoditas tersedia.</string>
    <string name="gagalogin_namapanggil">Isi nama panggilan dengan benar</string>
    <string name="gagalogin_password">Isi kata kunci dengan benar</string>
    <string name="gagalogin_masuk">Gagal masuk ke akun Pantau Harga anda</string>
    <string name="gagalogin_buatakun">Gagal membuat akun Pantau Harga</string>
    <string name="toast_loginmasukdulu">Silahkan masuk ke akun Pantau Harga dan pastikan telah mengisi data diri terlebih dahulu sebelum lanjut mengirim harga komoditas terbaru</string>
    <string name="toast_loginkeluarok">Anda telah keluar dari akun Pantau Harga</string>
    <string name="regist_namalengkap">Isi nama lengkap anda dengan benar</string>
    <string name="regist_namapanggilan">Isi nama panggilan (username) dengan benar</string>
    <string name="regist_password">Isi kata sandi dengan benar (minimal 6 karakter)</string>
    <string name="regist_passgasama">Kata sandi tidak sama</string>
    <string name="regist_email">Isi alamat email dengan benar</string>
    <string name="regist_nomorhp">Isi nomor handphone dengan benar</string>
    <string name="regist_alamat">Isi alamat lengkap dengan benar</string>
    <string name="datapengguna_email">Alamat E-mail</string>
    <string name="datapengguna_noktp">Nomor KTP</string>
    <string name="datapengguna_nohp">Nomor Handphone</string>
    <string name="datapengguna_alamat">Alamat Lengkap</string>
    <string name="datapengguna_kodepos">Kode Pos</string>
    <string name="datapengguna_tombol_keluar">KELUAR AKUN</string>
    <string name="err_username">Isi nama panggilan (username) dengan benar</string>
    <string name="err_nama">Isi nama lengkap anda dengan benar</string>
    <string name="err_email">Isi alamat email dengan benar</string>
    <string name="err_nomor_hp">Isi nomor handphone dengan benar</string>
    <string name="err_nomor_ktp">Isi nomor KTP dengan benar</string>
    <string name="err_kode_pos">Isi nomor Kode Pos dengan benar</string>
    <string name="err_alamat">Isi alamat lengkap dengan benar</string>
    <string name="lapor_hargajudul">Lapor Harga</string>
    <string name="jual_hargajudul">Jual Komoditas</string>
    <string name="lapor_hargajuduledit">Detil Laporan Harga</string>
    <string name="lapor_keterangan">Laporkan harga komoditas pangan dengan mengisi data-data dibawah ini dengan lengkap dan benar dan mengisi keterangan tambahan</string>
    <string name="lapor_keterangan1">Jual Komoditas pangan dengan mengisi data-data dibawah ini dengan lengkap dan benar dan mengisi keterangan tambahan</string>
    <string name="lapor_jeniskomoditas">Nama Komoditas</string>
    <string name="lapor_harga">Harga (Rp/Kg)</string>
    <string name="lapor_hargahint">harga komoditas</string>
    <string name="lapor_kuantitas">Jumlah (Kg)</string>
    <string name="lapor_kuantitashint">jumlah komoditas pangan</string>
    <string name="lapor_ket">Keterangan</string>
    <string name="lapor_kethint">isi keterangan komoditas pangan</string>
    <string name="lapor_koordinat">Lokasi</string>
    <string name="lapor_kirimdata">KIRIM DATA</string>
    <string name="lapor_simpandata">SIMPAN DRAFT</string>
    <string name="lapor_toast_gagalharga">Isi harga komoditas dengan benar</string>
    <string name="lapor_toast_jumlahkomod">Isi jumlah komoditas dengan benar</string>
    <string name="lapor_toast_gagalokasi">Lokasi pelaporan tidak ada. Aktifkan GPS dan internet perangkat anda.</string>
    <string name="lapor_gagalkirimdata">Gagal mengirim data laporan</string>
    <string name="lapor_okkirimdata">Data laporan harga telah dikirim</string>
    <string name="lapor_okkirimdraft">Data laporan disimpan sementara</string>
    <string name="teks_dialog_kirim">KIRIM LAGI</string>
    <string name="teks_dialog_selesai">SELESAI</string>
    <string name="petaambil_judulhalaman">Peta Ambil Lokasi</string>
    <string name="petaambil_judulbantuan">Bantuan</string>
    <string-array name="array_bantuanlokasi">
        <item>Sentuh posisi di peta untuk mengambil koordinat lokasi yang diinginkan.</item>
        <item>Sentuh dan tahan penanda berwarna merah di peta untuk mengaktifkan mode geser penanda peta. Jika mode geser sudah aktif, silahkan geser penanda peta ke posisi peta yang diinginkan untuk mengambil koordinat lokasinya.</item>
        <item>Jika koordinat lokasi sudah sesuai dengan keinginan, silahkan tekan tombol Simpan untuk menyimpan koordinat lokasi dan kembali ke halaman sebelumnya.</item>
    </string-array>
    <string name="toast_oksimpan">Koordinat lokasi laporan berhasil diambil</string>
    <string name="toastgagal_ambilkordinat">Koordinat lokasi laporan gagal diambil, aktifkan GPS dan koneksi internet untuk mengambil lokasi dengan akurat.</string>
    <string name="toast_gagalokasisetelpeta">Tidak dapat membuka peta karena GPS dan internet anda tidak aktif</string>
    <string name="riwayat_judul">Riwayat Laporan Harga</string>
    <string name="riwayat_datatidakada">Data riwayat tidak tersedia</string>
    <string name="riwayat_ingathapus">Hapus semua data riwayat laporan ?</string>
    <string name="riwayat_ingathapussatu">Hapus data laporan ini ?</string>
    <string name="riwayat_hapusdataselesai">Data telah dihapus</string>
    <string name="notification_title">Notification</string>
    <string name="notification_empty">Data notifikasi tidak tersedia</string>
    <string name="tentangapl_judul">Tentang Aplikasi</string>
    <string name="tentangapl_judulversi">versi 1.0.0</string>
    <string name="tentangapl_olehstelsel">CodingStelsel @2015</string>
    <string name="tentangapl_facebook">Facebook Page</string>
    <string name="tentangapl_facebooklink">https://www.facebook.com/pantauharga</string>
    <string name="tentangapl_pembuat">Dibuat oleh tim CodingStelsel di Code4Nation.org</string>
    <string name="title_activity_generate__qr">Generate_QR</string>
    <string name="title_activity_scan_qr">Scan_qr</string>
    <string name="ic_teks_generate_qr">Generate QR</string>
    <string name="ic_teks_menu_can_code">Scan QR</string>
    <string name="scan">Scan</string>
    <string name="btn_scan_now">Scan Now</string>
    <string name="txt_scan_qr_code">Scan QR</string>
    <string name="teks_login1">Login Google</string>
    <string name="lapor_gagalkirimdata3">Silahkan Login terlebih dahulu sebelum mengirim rate ke user</string>
    <string name="lapor_okkirimdatarating">Terimakasih sudah mengirimkan rate</string>
    <string name="lapor_rating">RATING KOMODITAS</string>
    <string name="sso_login_title">Login Google SSO</string>
    <string name="title_text">Google SSO Pangestu</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="save_profile">Save Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="logo_description">Logo Pantau Harga</string>
    <string name="image_profile">Image Profile</string>
    <string name="nama_lengkap">Nama Panggilan</string>
</resources>