<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".legacy.MainActivity">

    <include layout="@layout/toolbars" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/sign_in_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="gone">

                <ImageView
                    android:id="@+id/gambarlogin"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/logo_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/user_info_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="152dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/image_profile"
                        style="@style/myImageView"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.08"
                        android:contentDescription="@string/image_profile"
                        android:src="@drawable/ic_profilan" />

                    <TextView
                        android:id="@+id/text_nama_lengkap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="3dp"
                        android:singleLine="true"
                        android:text="@string/nama_lengkap"
                        android:textColor="@color/putih"
                        android:textSize="@dimen/ukuran16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/form_user_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                        <EditText
                            android:id="@+id/text_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_username"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="100"
                            android:singleLine="true"
                            android:textSize="@dimen/ukuran16sp" />


                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                        <EditText
                            android:id="@+id/text_nama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_namalengkap"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="100"
                            android:singleLine="true"
                            android:textSize="@dimen/ukuran16sp" />


                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                        <EditText
                            android:id="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:enabled="false"
                            android:hint="@string/login_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLength="100"
                            android:singleLine="true"
                            android:textSize="@dimen/ukuran16sp" />


                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_nomor_ktp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                        <EditText
                            android:id="@+id/text_nomor_ktp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="@string/karakterbolehnama"
                            android:hint="@string/login_ktp"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="100"
                            android:singleLine="true"
                            android:textSize="@dimen/ukuran16sp" />


                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_nomor_hp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                        <EditText
                            android:id="@+id/text_nomor_hp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="@string/karakterbolehnama"
                            android:hint="@string/login_nohp"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="20"
                            android:singleLine="true"
                            android:textSize="@dimen/ukuran16sp" />


                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                        <EditText
                            android:id="@+id/text_alamat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_alamat"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="200"
                            android:singleLine="true"
                            android:textSize="@dimen/ukuran16sp" />


                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_kode_pos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                        <EditText
                            android:id="@+id/text_kode_pos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_kodepos"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="5"
                            android:singleLine="true"
                            android:textSize="@dimen/ukuran16sp" />


                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/sign_out_and_disconnect"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:gravity="center|center_horizontal">

                        <Button
                            android:id="@+id/sign_out_button"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="150dp"
                            android:layout_height="42dp"
                            android:background="@drawable/desaintombolmenu"
                            android:text="@string/sign_out"
                            android:textColor="@color/putih"
                            android:textSize="@dimen/ukuran14sp"
                            android:textStyle="bold" />


                        <Button
                            android:id="@+id/disconnect_button"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="150dp"
                            android:layout_height="42dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/desaintombolmenudaftar"
                            android:text="@string/disconnect"
                            android:textColor="@color/putih"
                            android:textSize="@dimen/ukuran14sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>